# template/server/boot/routes.js
@@ -20,14 +20,14 @@ module.exports = function(app) {
 	var router = app.loopback.Router();
 
 	// proxy for object storage service
-	router.get('/api/Products/image/:container/:file', function(req, res) {
+	router.get('/api/products/image/:container/:file', function(req, res) {
 		os(vcap_os.credentials).download(req.params.container, req.params.file, function(download) {
 			download.pipe(res);
 		});
 	});
 
 	// protected endpoint only accessible after mobile app authenticates with mca service
-	router.get('/api/Products/protected', mca(app, vcap_mca.credentials), function(req, res) {
+	router.get('/api/products/protected', mca(app, vcap_mca.credentials), function(req, res) {
 		res.send("Hello, this is a protected resource of the mobile backend application!");
 	});
 
